fixed transparency on dark mode vector, added to contactus

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,7 @@
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'>\
     <path fill='%23d0c9eb' d='M0,192L80,165.3C160,139,320,85,480,90.7C640,96,800,160,960,160C1120,160,1280,96,1360,64L1440,32V320H0Z'/>\
   </svg>");
+	--vector: url("/public/Vector.png")
 
 }
 
@@ -122,6 +123,7 @@
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'>\
     <path fill='%232B2440' d='M0,192L80,165.3C160,139,320,85,480,90.7C640,96,800,160,960,160C1120,160,1280,96,1360,64L1440,32V320H0Z'/>\
   </svg>");
+	--vector: url("/public/VectorDark.png")
 }
 
 body {
